# Connect4

./: .gitignore  README.md  project_summary.txt
C++_Player/: CMakeLists.txt  README.md  main.cpp  server.cpp
C++_Player/alpha_beta/: CMakeLists.txt  alphabeta.cpp  alphabeta.h  alphabeta_board.h  humanplayer.cpp
C++_Player/combine_play/: CMakeLists.txt  combine_player.cpp  combine_player.h
C++_Player/common/: CMakeLists.txt  bit_board.h  config.h  connect4_board.h  dirichlet.h  gameplayer.h  lru_cache.h  mcts_node.h  memory_buffer.h
C++_Player/deepq_mcts/: CMakeLists.txt  mcts_pure.cpp  mcts_pure.h  mcts_zero.cpp  mcts_zero.h  policy_value_net.h  train.h
C++_Player/gameplayer/: alphabeta.cpp  alphabeta.h  alphabeta_board.h  config.h  connect4_board.h  humanplayer.h  lru_cache.h
C++_Player/human_play/: CMakeLists.txt  humanplayer.cpp  humanplayer.h
C++_Player/model/: batch.txt  best_model.pt  best_model_1.pt  best_model_1000.pt  best_model_1050.pt  best_model_1100.pt  best_model_700.pt  best_model_750.pt  best_model_850.pt  best_model_rs_13.pt  best_model_rs_13_new.pt  current_model.pt
C++_Player/model/rs_13/: best_model_1000.pt
Player_Cpp/: CMakeLists.txt  example-app.cpp  main.cpp
Player_Cpp/gameplayer/: alphabeta.cpp  alphabeta.h  alphabeta_board.h  config.h  connect4_board.cpp  connect4_board.h  gameplayer.h  humanplayer.cpp  (+1 more)
Python_Player/: best_policy.model  best_policy_v2.model  connect4_game.py  current_policy.model  human.py  neural_mcts.py  pure_mcts.py  test_board.py  train.py  valuenet.py  valuenet_v2.py  valuenet_v3.py  valuenet_v4.py
